syntax = "proto3";


package driver_service;
option go_package="genproto/driver_service";

import "google/protobuf/empty.proto";

service DriverService {
    rpc Create(DriverRequest) returns (DriverResponse) {}
    rpc Update(DriverResponse) returns (DriverResponse) {}
    rpc GetById(DriverId) returns (DriverResponse) {}
    rpc Delete(DriverId) returns (google.protobuf.Empty) {}
}

message DriverRequest {
    string first_name = 1;
    string last_name = 2;
    string phone_number = 3;
    string birth_date = 4;
}

message DriverResponse {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone_number = 4;
    string birth_date = 5;
}

message DriverId {
    string id = 1;
}